Added link to portfolio

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 -->
 <body>
   <aside>
+    
     <h1>Enter some numbers and submit with the buttons to use</h1>
     <hr>
     <li>Thoughts and things to improve:</li>
@@ -28,6 +29,7 @@
 
   </aside>
   <div class="controls">
+    <p><a id="portfolio" href="https://www.erikbohle.com">www.erikbohle.com | Portfolio website</a></p>
     <h1>Budget Tracker</h1>
     
     <div class="subtract">
